# kipl

./: .gitignore  CMakeLists.txt  LICENSE  README.md
docs/basics/: EN.md  TR.md
examples/: README.md  factorial.kipl  isPrime.kipl  oddEven.kipl  recursiveFactorial.kipl
include/: colors.h
src/: main.c  main.kipl  test.kipl
src/builtin/: README.md  builtin.c  builtin.h
src/builtin/kipl/: kipl.c  kipl.h
src/builtin/outln/: outln.c  outln.h
src/continue/: parseContinue.c  parseContinue.h
src/lexer/: lexer.c  lexer.h
src/parser/: Identifier.c  Identifier.h  dataTypes.h  global.c  global.h  parser.c  parser.h
src/parser/break/: parseBreak.c  parseBreak.h
src/parser/continue/: parseContinue.c
src/parser/error/: error.c  error.h  garbage.c  garbage.h
src/parser/expressions/: Data.c  Data.h  data.c  data.h  expressionElement.c  expressionElement.h  expressionQueue.c  expressionQueue.h  expressionStack.c  expressionStack.h  parseExpressions.c  parseExpressions.h  queueData.c  queueData.h  stackData.c  stackData.h
src/parser/for/: for.c  for.h  parseFor.c  parseFor.h
src/parser/function/: function.c  function.h  parseFunction.c  parseFunction.h  parseReturn.c  parseReturn.h
src/parser/helpers/dataLinkedList/: dataLinkedList.c  dataLinkedList.h
src/parser/helpers/dataTypes/: getDataType.c  getDataType.h  isDataType.c  isDataType.h  isFuncDataType.c  isFuncDataType.h
src/parser/helpers/file/: readFile.c  readFile.h
src/parser/helpers/typeConversion/: toBool.c  toBool.h  toString.c  typeConversion.c  typeConversion.h
src/parser/identifier/: parseIdentifier.c  parseIdentifier.h
src/parser/if/: if.c  if.h  ifParser.c  ifParser.h  parseIf.c  parseIf.h  trueBlock.c  trueBlock.h
src/parser/import/: parseImport.c  parseImport.h
src/parser/scope/: scope.c  scope.h
src/parser/switch/: parseCase.c  parseCase.h  parseDefault.c  parseDefault.h  parseSwitch.c  parseSwitch.h  switch.c  switch.h
src/parser/variable/: parseVariable.c  parseVariable.h  variable.c  variable.h
src/parser/variables/: variable.c  variable.h
src/token/: token.c  token.h
test/: README.md
