cmake_minimum_required(VERSION 3.28)
project(interpreter C)

set(CMAKE_C_STANDARD 11)

add_executable(interpreter src/main.c
        src/token/token.c
        src/token/token.h
        src/lexer/lexer.c
        src/lexer/lexer.h
        src/parser/parser.c
        src/parser/parser.h
        src/parser/global.h
        src/parser/Scope/scope.c
        src/parser/Scope/scope.h
        src/parser/global.c
        src/parser/variable/variable.c
        src/parser/variable/variable.h
        src/parser/variable/parseVariable.c
        src/parser/variable/parseVariable.h
        src/parser/error/error.c
        src/parser/error/error.h
        include/colors.h
        src/parser/helpers/dataTypes/isDataType.c
        src/parser/helpers/dataTypes/isDataType.h
        src/parser/helpers/dataTypes/getDataType.c
        src/parser/helpers/dataTypes/getDataType.h
        src/parser/expressions/parseExpressions.c
        src/parser/expressions/parseExpressions.h
        src/parser/dataType.h
        src/parser/expressions/Data.h
        src/parser/expressions/Data.c
        src/parser/helpers/typeConversion/toString.c
        src/parser/helpers/typeConversion/toString.h
        src/parser/expressions/expressionElement.c
        src/parser/expressions/expressionElement.h
        src/parser/expressions/expressionStack.c
        src/parser/expressions/expressionStack.h
        src/parser/expressions/expressionQueue.c
        src/parser/expressions/expressionQueue.h
        src/parser/helpers/typeConversion/toBool.c
        src/parser/helpers/typeConversion/toBool.h
        src/parser/if/parseIf.c
        src/parser/if/parseIf.h
        src/parser/for/parseFor.c
        src/parser/for/parseFor.h
        src/parser/for/for.c
        src/parser/for/for.h
        src/parser/identifier/parseIdentifier.c
        src/parser/identifier/parseIdentifier.h
        src/parser/continue/parseContinue.c
        src/parser/continue/parseContinue.h
        src/parser/break/parseBreak.c
        src/parser/break/parseBreak.h
        src/parser/break/parseBreak.c
        src/parser/break/parseBreak.h
        src/parser/break/parseBreak.c
        src/parser/break/parseBreak.h
        src/parser/import/parseImport.c
        src/parser/import/parseImport.h
        src/parser/helpers/file/readFile.c
        src/parser/helpers/file/readFile.h
        src/parser/function/function.c
        src/parser/function/function.h
        src/builtin/out/out.c
        src/builtin/out/out.h
        src/parser/if/TrueBlock.c
        src/parser/if/trueBlock.h
        src/parser/commands/out/parseOut.c
        src/parser/commands/out/parseOut.h
        src/parser/switch/parseSwitch.c
        src/parser/switch/parseSwitch.h
        src/parser/switch/switch.c
        src/parser/switch/switch.h
        src/parser/switch/parseCase.c
        src/parser/switch/parseCase.h
        src/parser/switch/parseDefault.c
        src/parser/switch/parseDefault.h
        src/builtin/builtin.c
        src/builtin/builtin.h
        src/parser/helpers/dataTypes/isFuncDataType.c
        src/parser/helpers/dataTypes/isFuncDataType.h
        src/parser/function/parseFunction.c
        src/parser/function/parseFunction.h
)
